licenses(["notice"])  # Apache 2.0

exports_files(["LICENSE"])

proto_library(
    name = "leap_table_proto",
    srcs = ["unsmear/leap_table.proto"],
)

cc_proto_library(
    name = "leap_table_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":leap_table_proto"],
)

genrule(
    name = "leap_table_data",
    srcs = ["leap_table.textpb"],
    outs = ["leap_table.pb"],
    cmd = "$(location leap_table_tool) --output=proto $< > $@",
    tools = [":leap_table_tool"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "leap_table_json",
    srcs = ["leap_table.textpb"],
    outs = ["leap_table.json"],
    cmd = "$(location leap_table_tool) --output=json $< > $@",
    tools = [":leap_table_tool"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "unsmear",
    srcs = [
        "unsmear/format.cc",
        "unsmear/leap_table.cc",
    ],
    hdrs = ["unsmear/unsmear.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":leap_table_cc_proto",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_binary(
    name = "leap_table_tool",
    srcs = ["leap_table_tool.cc"],
    deps = [
        ":leap_table_cc_proto",
        ":unsmear",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "duration_test",
    srcs = ["unsmear/duration_test.cc"],
    deps = [
        ":unsmear",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "leap_table_test",
    srcs = ["unsmear/leap_table_test.cc"],
    data = [":leap_table_data"],
    deps = [
        ":unsmear",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "time_test",
    srcs = ["unsmear/time_test.cc"],
    deps = [
        ":unsmear",
        "@com_google_googletest//:gtest_main",
    ],
)
