licenses(["notice"])

exports_files(["LICENSE"])

proto_library(
    name = "leap_table_proto",
    srcs = ["unsmear/leap_table.proto"],
)

cc_proto_library(
    name = "leap_table_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":leap_table_proto"],
)

cc_library(
    name = "unsmear",
    srcs = [
        "unsmear/format.cc",
        "unsmear/leap_table.cc",
    ],
    hdrs = ["unsmear/unsmear.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":leap_table_cc_proto",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_test(
    name = "duration_test",
    srcs = ["unsmear/duration_test.cc"],
    deps = [
        ":unsmear",
        "@com_google_absl//absl/time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "leap_table_test",
    srcs = ["unsmear/leap_table_test.cc"],
    deps = [
        ":unsmear",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "time_test",
    srcs = ["unsmear/time_test.cc"],
    deps = [
        ":unsmear",
        "@com_google_googletest//:gtest_main",
    ],
)
