genrule(
    name = "leap_table_data",
    srcs = ["leap_table.textpb"],
    outs = ["leap_table.pb"],
    cmd = "$(location leap_table_tool) --output=proto $< > $@",
    tools = [":leap_table_tool"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "leap_table_json",
    srcs = ["leap_table.textpb"],
    outs = ["leap_table.json"],
    cmd = "$(location leap_table_tool) --output=json $< > $@",
    tools = [":leap_table_tool"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "leap_table_tool",
    srcs = ["leap_table_tool.cc"],
    deps = [
        "//:leap_table_cc_proto",
        "//:unsmear",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "leap_table_test",
    srcs = ["leap_table_test.cc"],
    data = [":leap_table_data"],
    deps = [
        "//:unsmear",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
    ],
)
